// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Units selectors getEnemyMinionsByUserId should return all enemy minions of player which has passed id 1`] = `
Array [
  Object {
    "_id": "e_pawn1",
    "attack": 1,
    "cost": 1,
    "counterEffects": Array [],
    "effects": Array [],
    "health": 6,
    "hero": false,
    "moves": 0,
    "name": "Pawn",
    "ownerId": "enemy",
    "type": "PAWN",
  },
]
`;

exports[`Units selectors getEnemyUnitIdsByUserId should return list of all ids of \`enemy\` 1`] = `
Array [
  "e_hero",
  "e_pawn1",
]
`;

exports[`Units selectors getEnemyUnits should return units of enemy of the current user 1`] = `
Array [
  Object {
    "_id": "e_hero",
    "attack": 1,
    "cost": 1,
    "counterEffects": Array [],
    "effects": Array [],
    "health": 6,
    "hero": true,
    "moves": 0,
    "name": "Pawn",
    "ownerId": "enemy",
    "type": "PAWN",
  },
  Object {
    "_id": "e_pawn1",
    "attack": 1,
    "cost": 1,
    "counterEffects": Array [],
    "effects": Array [],
    "health": 6,
    "hero": false,
    "moves": 0,
    "name": "Pawn",
    "ownerId": "enemy",
    "type": "PAWN",
  },
]
`;

exports[`Units selectors getEnemyUnitsByUserId should return all enemy units of player which has passed id 1`] = `
Array [
  Object {
    "_id": "e_hero",
    "attack": 1,
    "cost": 1,
    "counterEffects": Array [],
    "effects": Array [],
    "health": 6,
    "hero": true,
    "moves": 0,
    "name": "Pawn",
    "ownerId": "enemy",
    "type": "PAWN",
  },
  Object {
    "_id": "e_pawn1",
    "attack": 1,
    "cost": 1,
    "counterEffects": Array [],
    "effects": Array [],
    "health": 6,
    "hero": false,
    "moves": 0,
    "name": "Pawn",
    "ownerId": "enemy",
    "type": "PAWN",
  },
]
`;

exports[`Units selectors getMinionsByUserId should return list of \`player\` users 1`] = `
Array [
  Object {
    "_id": "pl_pawn1",
    "attack": 1,
    "cost": 1,
    "counterEffects": Array [],
    "effects": Array [],
    "health": 6,
    "hero": false,
    "moves": 0,
    "name": "Pawn",
    "ownerId": "player",
    "type": "PAWN",
  },
  Object {
    "_id": "pl_pawn2",
    "attack": 1,
    "cost": 1,
    "counterEffects": Array [],
    "effects": Array [],
    "health": 6,
    "hero": false,
    "moves": 0,
    "name": "Pawn",
    "ownerId": "player",
    "type": "PAWN",
  },
  Object {
    "_id": "pl_pawn3",
    "attack": 1,
    "cost": 1,
    "counterEffects": Array [],
    "effects": Array [],
    "health": 6,
    "hero": false,
    "moves": 0,
    "name": "Pawn",
    "ownerId": "player",
    "type": "PAWN",
  },
]
`;

exports[`Units selectors getPlayerUnits should return units of current player 1`] = `
Array [
  Object {
    "_id": "p_hero",
    "attack": 1,
    "cost": 1,
    "counterEffects": Array [],
    "effects": Array [],
    "health": 6,
    "hero": true,
    "moves": 0,
    "name": "Pawn",
    "ownerId": "player",
    "type": "PAWN",
  },
  Object {
    "_id": "pl_pawn1",
    "attack": 1,
    "cost": 1,
    "counterEffects": Array [],
    "effects": Array [],
    "health": 6,
    "hero": false,
    "moves": 0,
    "name": "Pawn",
    "ownerId": "player",
    "type": "PAWN",
  },
  Object {
    "_id": "pl_pawn2",
    "attack": 1,
    "cost": 1,
    "counterEffects": Array [],
    "effects": Array [],
    "health": 6,
    "hero": false,
    "moves": 0,
    "name": "Pawn",
    "ownerId": "player",
    "type": "PAWN",
  },
  Object {
    "_id": "pl_pawn3",
    "attack": 1,
    "cost": 1,
    "counterEffects": Array [],
    "effects": Array [],
    "health": 6,
    "hero": false,
    "moves": 0,
    "name": "Pawn",
    "ownerId": "player",
    "type": "PAWN",
  },
]
`;

exports[`Units selectors getUnitById should return a unit 1`] = `
Object {
  "_id": "pl_pawn1",
  "attack": 1,
  "cost": 1,
  "counterEffects": Array [],
  "effects": Array [],
  "health": 6,
  "hero": false,
  "moves": 0,
  "name": "Pawn",
  "ownerId": "player",
  "type": "PAWN",
}
`;

exports[`Units selectors getUnitFriendlyMinions should return list of friendly minions 1`] = `
Array [
  Object {
    "_id": "pl_pawn2",
    "attack": 1,
    "cost": 1,
    "counterEffects": Array [],
    "effects": Array [],
    "health": 6,
    "hero": false,
    "moves": 0,
    "name": "Pawn",
    "ownerId": "player",
    "type": "PAWN",
  },
  Object {
    "_id": "pl_pawn3",
    "attack": 1,
    "cost": 1,
    "counterEffects": Array [],
    "effects": Array [],
    "health": 6,
    "hero": false,
    "moves": 0,
    "name": "Pawn",
    "ownerId": "player",
    "type": "PAWN",
  },
]
`;

exports[`Units selectors getUnitFriendlyUnits should return list of all friendly units 1`] = `
Array [
  Object {
    "_id": "p_hero",
    "attack": 1,
    "cost": 1,
    "counterEffects": Array [],
    "effects": Array [],
    "health": 6,
    "hero": true,
    "moves": 0,
    "name": "Pawn",
    "ownerId": "player",
    "type": "PAWN",
  },
  Object {
    "_id": "pl_pawn2",
    "attack": 1,
    "cost": 1,
    "counterEffects": Array [],
    "effects": Array [],
    "health": 6,
    "hero": false,
    "moves": 0,
    "name": "Pawn",
    "ownerId": "player",
    "type": "PAWN",
  },
  Object {
    "_id": "pl_pawn3",
    "attack": 1,
    "cost": 1,
    "counterEffects": Array [],
    "effects": Array [],
    "health": 6,
    "hero": false,
    "moves": 0,
    "name": "Pawn",
    "ownerId": "player",
    "type": "PAWN",
  },
]
`;

exports[`Units selectors getUnitIdsByUserId should return list of all ids of \`player\` 1`] = `
Array [
  "p_hero",
  "pl_pawn1",
  "pl_pawn2",
  "pl_pawn3",
]
`;

exports[`Units selectors getUnitsByTargetingScope get all enemy minions 1`] = `
Array [
  Object {
    "_id": "e_pawn1",
    "attack": 1,
    "cost": 1,
    "counterEffects": Array [],
    "effects": Array [],
    "health": 6,
    "hero": false,
    "moves": 0,
    "name": "Pawn",
    "ownerId": "enemy",
    "type": "PAWN",
  },
]
`;

exports[`Units selectors getUnitsByTargetingScope get all enemy units 1`] = `
Array [
  Object {
    "_id": "e_hero",
    "attack": 1,
    "cost": 1,
    "counterEffects": Array [],
    "effects": Array [],
    "health": 6,
    "hero": true,
    "moves": 0,
    "name": "Pawn",
    "ownerId": "enemy",
    "type": "PAWN",
  },
  Object {
    "_id": "e_pawn1",
    "attack": 1,
    "cost": 1,
    "counterEffects": Array [],
    "effects": Array [],
    "health": 6,
    "hero": false,
    "moves": 0,
    "name": "Pawn",
    "ownerId": "enemy",
    "type": "PAWN",
  },
]
`;

exports[`Units selectors getUnitsByTargetingScope get all friendly minions 1`] = `
Array [
  Object {
    "_id": "pl_pawn1",
    "attack": 1,
    "cost": 1,
    "counterEffects": Array [],
    "effects": Array [],
    "health": 6,
    "hero": false,
    "moves": 0,
    "name": "Pawn",
    "ownerId": "player",
    "type": "PAWN",
  },
  Object {
    "_id": "pl_pawn2",
    "attack": 1,
    "cost": 1,
    "counterEffects": Array [],
    "effects": Array [],
    "health": 6,
    "hero": false,
    "moves": 0,
    "name": "Pawn",
    "ownerId": "player",
    "type": "PAWN",
  },
  Object {
    "_id": "pl_pawn3",
    "attack": 1,
    "cost": 1,
    "counterEffects": Array [],
    "effects": Array [],
    "health": 6,
    "hero": false,
    "moves": 0,
    "name": "Pawn",
    "ownerId": "player",
    "type": "PAWN",
  },
]
`;

exports[`Units selectors getUnitsByTargetingScope get all friendly units 1`] = `
Array [
  Object {
    "_id": "p_hero",
    "attack": 1,
    "cost": 1,
    "counterEffects": Array [],
    "effects": Array [],
    "health": 6,
    "hero": true,
    "moves": 0,
    "name": "Pawn",
    "ownerId": "player",
    "type": "PAWN",
  },
  Object {
    "_id": "pl_pawn1",
    "attack": 1,
    "cost": 1,
    "counterEffects": Array [],
    "effects": Array [],
    "health": 6,
    "hero": false,
    "moves": 0,
    "name": "Pawn",
    "ownerId": "player",
    "type": "PAWN",
  },
  Object {
    "_id": "pl_pawn2",
    "attack": 1,
    "cost": 1,
    "counterEffects": Array [],
    "effects": Array [],
    "health": 6,
    "hero": false,
    "moves": 0,
    "name": "Pawn",
    "ownerId": "player",
    "type": "PAWN",
  },
  Object {
    "_id": "pl_pawn3",
    "attack": 1,
    "cost": 1,
    "counterEffects": Array [],
    "effects": Array [],
    "health": 6,
    "hero": false,
    "moves": 0,
    "name": "Pawn",
    "ownerId": "player",
    "type": "PAWN",
  },
]
`;

exports[`Units selectors getUnitsByTargetingScope get all units 1`] = `
Array [
  Object {
    "_id": "p_hero",
    "attack": 1,
    "cost": 1,
    "counterEffects": Array [],
    "effects": Array [],
    "health": 6,
    "hero": true,
    "moves": 0,
    "name": "Pawn",
    "ownerId": "player",
    "type": "PAWN",
  },
  Object {
    "_id": "e_hero",
    "attack": 1,
    "cost": 1,
    "counterEffects": Array [],
    "effects": Array [],
    "health": 6,
    "hero": true,
    "moves": 0,
    "name": "Pawn",
    "ownerId": "enemy",
    "type": "PAWN",
  },
  Object {
    "_id": "pl_pawn1",
    "attack": 1,
    "cost": 1,
    "counterEffects": Array [],
    "effects": Array [],
    "health": 6,
    "hero": false,
    "moves": 0,
    "name": "Pawn",
    "ownerId": "player",
    "type": "PAWN",
  },
  Object {
    "_id": "pl_pawn2",
    "attack": 1,
    "cost": 1,
    "counterEffects": Array [],
    "effects": Array [],
    "health": 6,
    "hero": false,
    "moves": 0,
    "name": "Pawn",
    "ownerId": "player",
    "type": "PAWN",
  },
  Object {
    "_id": "pl_pawn3",
    "attack": 1,
    "cost": 1,
    "counterEffects": Array [],
    "effects": Array [],
    "health": 6,
    "hero": false,
    "moves": 0,
    "name": "Pawn",
    "ownerId": "player",
    "type": "PAWN",
  },
  Object {
    "_id": "e_pawn1",
    "attack": 1,
    "cost": 1,
    "counterEffects": Array [],
    "effects": Array [],
    "health": 6,
    "hero": false,
    "moves": 0,
    "name": "Pawn",
    "ownerId": "enemy",
    "type": "PAWN",
  },
]
`;

exports[`Units selectors getUnitsByTargetingScope get local unit 1`] = `
Array [
  Object {
    "_id": "pl_pawn1",
    "attack": 1,
    "cost": 1,
    "counterEffects": Array [],
    "effects": Array [],
    "health": 6,
    "hero": false,
    "moves": 0,
    "name": "Pawn",
    "ownerId": "player",
    "type": "PAWN",
  },
]
`;

exports[`Units selectors getUnitsByTargetingScope get other friendly minions 1`] = `
Array [
  Object {
    "_id": "pl_pawn2",
    "attack": 1,
    "cost": 1,
    "counterEffects": Array [],
    "effects": Array [],
    "health": 6,
    "hero": false,
    "moves": 0,
    "name": "Pawn",
    "ownerId": "player",
    "type": "PAWN",
  },
  Object {
    "_id": "pl_pawn3",
    "attack": 1,
    "cost": 1,
    "counterEffects": Array [],
    "effects": Array [],
    "health": 6,
    "hero": false,
    "moves": 0,
    "name": "Pawn",
    "ownerId": "player",
    "type": "PAWN",
  },
]
`;

exports[`Units selectors getUnitsByUserId should return list of \`player\` users 1`] = `
Array [
  Object {
    "_id": "p_hero",
    "attack": 1,
    "cost": 1,
    "counterEffects": Array [],
    "effects": Array [],
    "health": 6,
    "hero": true,
    "moves": 0,
    "name": "Pawn",
    "ownerId": "player",
    "type": "PAWN",
  },
  Object {
    "_id": "pl_pawn1",
    "attack": 1,
    "cost": 1,
    "counterEffects": Array [],
    "effects": Array [],
    "health": 6,
    "hero": false,
    "moves": 0,
    "name": "Pawn",
    "ownerId": "player",
    "type": "PAWN",
  },
  Object {
    "_id": "pl_pawn2",
    "attack": 1,
    "cost": 1,
    "counterEffects": Array [],
    "effects": Array [],
    "health": 6,
    "hero": false,
    "moves": 0,
    "name": "Pawn",
    "ownerId": "player",
    "type": "PAWN",
  },
  Object {
    "_id": "pl_pawn3",
    "attack": 1,
    "cost": 1,
    "counterEffects": Array [],
    "effects": Array [],
    "health": 6,
    "hero": false,
    "moves": 0,
    "name": "Pawn",
    "ownerId": "player",
    "type": "PAWN",
  },
]
`;
